sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: reassignment to val
			i = 1
                          ^AlgGnomeSort:13: error: reassignment to val
			i = i-1
                          ^